# pacman

./: .gitignore  Makefile  README.md  config.json  instructions.txt  pac-man.py  pacman.spec  pyproject.toml  truc.json
libs/: mazegenerator-2.0.1-py3-none-any.whl  mlx-2.2-py3-none-any.whl
src/: __main__.py
src/app/: App.py  __init__.py
src/app/game/: Actor.py  FindPath.py  GameEngine.py  MazeUtils.py  PacGum.py  Player.py  SuperPacGum.py  __init__.py
src/app/game/npc/: AmbushStrategy.py  ChaseStrategy.py  FleeStrategy.py  NPC.py  NPCStrategy.py  ScatterStrategy.py  __init__.py
src/app/game_engine/: MazeUtils.py
src/app/rendering/: GameRenderer.py  GlobalRenderer.py  MazeRenderer.py  SpriteRenderer.py  __init__.py
src/app/rendering/gui/: BaseScreen.py  GameOverScreen.py  HighscoresScreen.py  InGameHud.py  InstructionsScreen.py  MenuScreen.py  PauseMenuScreen.py  VictoryScreen.py  __init__.py
src/models/: Color.py  Configuration.py  GameStates.py  NPCSprites.py  PlayerSprites.py  UIMode.py  __init__.py  resources.py
src/models/errors/: FileFormatError.py  __init__.py
src/parsing/: ConfigParser.py  __init__.py
typings/mazegenerator/: __init__.pyi  mazegenerator.pyi
typings/mlx/: __init__.pyi
