[project]
name = "pacman"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flake8>=7.3.0",
    "mlx",
    "mazegenerator",
    "mypy>=1.20.2",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
]

[tool.uv.sources]
mlx = { path = "libs/mlx-2.2-py3-none-any.whl" }
mazegenerator = { path = "libs/mazegenerator-2.0.1-py3-none-any.whl" }

[tool.mypy]
mypy_path = "typings"
strict = true
